syntax = "proto3";

service BiDirectionalStreamer {
  rpc StreamLines (stream LineMessage) returns (stream LineMessage) {}
}

message LineMessage {
  string line = 1;
}
